# DentalCRM

./: .gitattributes  .gitignore  README.md
backend-django/: .env-example  pytest.ini
backend-django/appointments/: admin.py  models.py  serializers.py  urls.py  views.py
backend-django/clinic/: settings.py  urls.py
backend-django/dashboard/: admin.py  models.py  services.py  urls.py  views.py
backend-django/doctors/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend-django/invoices/: admin.py  apps.py  models.py  serializers.py  views.py
backend-django/medical_records/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend-django/services/: admin.py  models.py  serializers.py  urls.py  views.py
backend-django/tests/: test_clinic_end_to_end.py  test_doctors_module.py  test_medical_records_module.py  test_services_module.py  test_users_module.py
backend-django/users/: admin.py  apps.py  backends.py  models.py  permissions.py  (+4 more)
client-desctop_c++/: CMakeLists.txt
client-desctop_c++/src/: logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h
client-desctop_c++/src/controllers/: addappointmentcontroller.cpp  addappointmentcontroller.h  appointmentdetailcontroller.cpp  appointmentdetailcontroller.h  patientdetailcontroller.cpp  patientdetailcontroller.h  patientscontroller.cpp  patientscontroller.h  schedulecontroller.cpp  schedulecontroller.h  workinghourscontroller.cpp  workinghourscontroller.h
client-desctop_c++/src/models/: models.h
client-desctop_c++/src/screens/: addappointmentdialog.cpp  addappointmentdialog.h
client-desctop_c++/src/services/: apiclient.cpp  apiclient.h
client-desctop_c++/src/utils/: uihelpers.cpp  uihelpers.h
client-desctop_c++/src/views/: appointmentdetailview.cpp  appointmentdetailview.h  appointmentdetailview_ui.cpp  appointmentdetailview_ui.h  patientdetailview.cpp  patientdetailview.h  patientsview.cpp  patientsview.h  scheduleview.cpp  scheduleview.h  scheduleview_ui.cpp  scheduleview_ui.h  settingswidget.cpp  settingswidget.h  workinghoursview.cpp  workinghoursview.h
client-web_ts/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
(+54 files in other folders)
